Fix gallery image position- Now align center on smaller screen.

--- a/src/App.css
+++ b/src/App.css
@@ -64,11 +64,16 @@ h1 {
   margin: 2.5rem;
 }
 
+.image-col {
+  align-items: center;
+  justify-content: center;
+}
+
 .GalleryImage {
-  width: 40rem;
-  max-width: 100%;
-  height: 362px;
-  margin: 2rem;
+  width: 100%;
+  overflow: hidden;
+  height: auto;
+  margin: 1.4rem auto;
   cursor: pointer;
 }
 
